Tests/RunCMake/CMakePresets/ExtraRootField-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/ExtraRootField:
Error: @10,14: Invalid extra field "invalid" in root object
  "invalid": true
             \^$
